--- a/source/404.md
+++ b/source/404.md
@@ -1,10 +1,12 @@
 ---
-title: 汝豈是欲訪問👇
+title: 404 滿地覓無 🐫
 toc: false
 permalink: /404.html
 p: /404
 date: 2024-03-31 21:38:00
 ---
+
+[按此轉去頭頁](/)，無哩來睇下底個網頁：
 
 * [English-Chinese Vocabulary of the Vernacular Or Spoken Language of Swatow (英漢汕頭方言口語詞典)](/english_swatow)
 * [Handbook of the Swatow Vernacular (汕頭話讀本)](/swatowbook)
