Change swatow_book to Handbook_of_the_Swatow_Vernacular

--- a/source/404.md
+++ b/source/404.md
@@ -9,5 +9,5 @@ date: 2024-03-31 21:38:00
 [按此轉去頭頁](/)，無哩來睇下底個網頁：
 
 * [English-Chinese Vocabulary of the Vernacular Or Spoken Language of Swatow (英漢汕頭方言口語詞典)](/English-Chinese_Vocabulary_of_the_Vernacular_Or_Spoken_Language_of_Swatow)
-* [Handbook of the Swatow Vernacular (汕頭話讀本)](/swatowbook)
+* [Handbook of the Swatow Vernacular (汕頭話讀本)](/Handbook_of_the_Swatow_Vernacular)
 * [臺灣閩南語常用詞辭典](/holodict)
