--- a/source/404.md
+++ b/source/404.md
@@ -1,14 +1,17 @@
 ---
-title: 404 滿地覓無 🐫
+title: 404 滿地覓無
 toc: false
 permalink: /404.html
 p: /404
 date: 2024-03-31 21:38:00
 ---
 
-[點此轉去頭頁](/)，無哩來睇下底個網頁：
+[點此轉去頭頁](/)，或者來睇下底個網頁：
 
 * [English-Chinese Vocabulary of the Vernacular Or Spoken Language of Swatow (英漢汕頭方言口語詞典)](/English-Chinese_Vocabulary_of_the_Vernacular_Or_Spoken_Language_of_Swatow)
 * [Handbook of the Swatow Vernacular (汕頭話讀本)](/Handbook_of_the_Swatow_Vernacular)
 * [A Chinese and English vocabulary, in the Tie-chiu dialect (漢英潮州方言字典)](/A_Chinese_and_English_vocabulary,_in_the_Tie-chiu_dialect)
+* [A pronouncing and defining dictionary of the Swatow dialect, arranged according to syllables and tones(汕頭方言音義字典)](/A_Pronouncing_and_Defining_Dictionary_of_the_Swatow_Dialect)
 * [臺灣閩南語常用詞辭典](/holodict)
+
+另外，[點此可訪問網站地圖](/index)，以查睇更㩼。
